--- a/src/main/resources/static/css/group.css
+++ b/src/main/resources/static/css/group.css
@@ -89,3 +89,25 @@ article {
     margin: 10px;
 }
 
+.row_horizontal {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.block {
+    width: 100px;
+}
+
+.container_hor {
+    width: 1119px;
+    height: 150px;
+    overflow: hidden;
+}
+
+.box_hor {
+    width: 150px;
+    height: 120px;
+    display: inline-block;
+}
+
