--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -158,11 +158,13 @@
                                     </div>
                                 </div>
                                 <div th:if="${!post.getImg().isEmpty()}">
-                                    <div class="row image" th:each="img : ${post.getImg()}">
-                                        <div>
-                                            <img align="middle"
-                                                 style=" border-radius: 5px; display: block;height: 310px; width: 525px;"
-                                                 th:src="${img}"/>
+                                    <div class="scroll" style="height: 310px; width: 525px; overflow-x: hidden; overflow-y: auto;">
+                                        <div class="row image" th:each="img : ${post.getImg()}">
+                                            <div>
+                                                <img align="middle"
+                                                     style=" border-radius: 5px;height: 310px; width: auto;max-width: 525px;"
+                                                     th:src="${img}"/>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
